; ModuleID = '/home/carl/AnghaBench/lab/q3map2/libs/picomodel/extr_picointernal.c__pico_parse_vec_def.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/libs/picomodel/extr_picointernal.c__pico_parse_vec_def.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_pico_parse_vec_def(i32* %0, float* %1, float* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca float*, align 8
  %7 = alloca float*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store float* %1, float** %6, align 8
  store float* %2, float** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %3
  %13 = load float*, float** %6, align 8
  %14 = icmp eq float* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %12, %3
  store i32 0, i32* %4, align 4
  br label %44

16:                                               ; preds = %12
  %17 = load float*, float** %7, align 8
  %18 = load float*, float** %6, align 8
  %19 = call i32 @_pico_copy_vec(float* %17, float* %18)
  store i32 0, i32* %9, align 4
  br label %20

20:                                               ; preds = %40, %16
  %21 = load i32, i32* %9, align 4
  %22 = icmp slt i32 %21, 3
  br i1 %22, label %23, label %43

23:                                               ; preds = %20
  %24 = load i32*, i32** %5, align 8
  %25 = call i8* @_pico_parse(i32* %24, i32 0)
  store i8* %25, i8** %8, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = icmp eq i8* %26, null
  br i1 %27, label %28, label %32

28:                                               ; preds = %23
  %29 = load float*, float** %7, align 8
  %30 = load float*, float** %6, align 8
  %31 = call i32 @_pico_copy_vec(float* %29, float* %30)
  store i32 0, i32* %4, align 4
  br label %44

32:                                               ; preds = %23
  %33 = load i8*, i8** %8, align 8
  %34 = call i64 @atof(i8* %33)
  %35 = sitofp i64 %34 to float
  %36 = load float*, float** %6, align 8
  %37 = load i32, i32* %9, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds float, float* %36, i64 %38
  store float %35, float* %39, align 4
  br label %40

40:                                               ; preds = %32
  %41 = load i32, i32* %9, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %9, align 4
  br label %20

43:                                               ; preds = %20
  store i32 1, i32* %4, align 4
  br label %44

44:                                               ; preds = %43, %28, %15
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i32 @_pico_copy_vec(float*, float*) #1

declare dso_local i8* @_pico_parse(i32*, i32) #1

declare dso_local i64 @atof(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
